fix(server): toEnumList 반환값 버그 수정 (NPE 방지)